# text2sql

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  test_vl.py
.streamlit/: config.toml
data/: eval_set.jsonl  eval_set_v2.jsonl  global_sales_data.sqlite  global_sales_data_logic_distribution.csv
eval/: debug_events.py  eval.py  eval2.py  eval3.py  eval4.py  eval5.py  eval6.py
eval/judge/: agent.py
eval/results/: eval2_results.json  eval3_comparison.csv  eval3_comparison.html  eval3_comparison.json  eval3_problematic.csv  eval4_comparison.csv  eval4_comparison.html  eval4_comparison.json  eval4_problematic.csv  eval5_comparison.csv  eval5_comparison.html  eval5_comparison.json  eval5_problematic.csv  eval6_comparison.csv  eval6_comparison.html  eval6_comparison.json  eval6_problematic.csv  eval7_comparison.csv  eval7_comparison.html  eval7_comparison.json  eval7_summary.json  eval8_results.csv  eval8_results.json  eval8_summary copy.json  eval8_summary.json
eval/results/2026-02-01_04-36-05/: eval8_results.csv  eval8_summary.json  eval_results.json
eval/results/2026-02-01_05-39-22/: eval_results.json
eval/results/2026-02-01_05-41-53/: eval8_results.csv  (+2 more)
scripts/: data_generator.py  demo.py  generate_ground_truth.py  ground_truth_a.py  ground_truth_b.py  ground_truth_c.py  litellm_agent.py  read_data.py  run_adk_agent.py  run_planned_agent.py  test_agent_v6.py  test_gptoss.py  test_vision.py
web_ui/: app.py
web_ui/pages/: 1_Chat.py  2_Eval.py  3_System_Monitor.py  4_Data_Dashboard.py  5_Image_Read_Chat.py
(+14 files in other folders)
